--- a/Lab04/index.html
+++ b/Lab04/index.html
@@ -15,6 +15,10 @@
 	<header></header>
 	<section></section>
 	<!-- Proceed to js/json.js for the remainder of the lesson -->
+	<p>
+		<span id="student_name">Rahid Jakhra</span>
+		<span id="student_id">200540928</span>
+	</p>
 </body>
 
 </html>
